// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consonant/LoadMore Check snapshots should renders correctly with show < total 1`] = `
<div
  className="consonant-load-more"
  data-testid="consonant-load-more"
>
  <div
    className="consonant-load-more--inner"
  >
    <p
      className="consonant-load-more--text"
      dangerouslySetInnerHTML={
        Object {
          "__html": "i18n.loadMore.resultsQuantityText <span class=\\"consonant-load-more--shown\\">1</span> <span class=\\"consonant-load-more--total\\">100</span>",
        }
      }
      data-testid="consonant-load-more--text"
    />
    <button
      className="consonant-load-more--btn"
      data-testid="load-more__button"
      onClick={[MockFunction]}
      tabIndex="0"
      type="button"
    >
      i18n.loadMore.btnText
    </button>
  </div>
</div>
`;

exports[`Consonant/LoadMore Check snapshots should renders correctly with show > total 1`] = `
<div
  className="consonant-load-more"
  data-testid="consonant-load-more"
>
  <div
    className="consonant-load-more--inner"
  >
    <p
      className="consonant-load-more--text"
      dangerouslySetInnerHTML={
        Object {
          "__html": "i18n.loadMore.resultsQuantityText <span class=\\"consonant-load-more--shown\\">100</span> <span class=\\"consonant-load-more--total\\">1</span>",
        }
      }
      data-testid="consonant-load-more--text"
    />
  </div>
</div>
`;
